JP GENERATION - TEAM BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -98,10 +98,6 @@
 <!-------------ZACIATOK CONTENTU-------------->
 <section class="services">
     <header class="headline-con">
-        <div class="con-main">
-            <div class="line-con1"></div>
-            <div class="spacer"></div>
-        </div>
         <h2>Nájdete nás</h2>
     </header>
     <div class="con-look">
@@ -109,6 +105,14 @@
     </div>
 </section>
 <!-------------FORMULAR------------->
+<section class="services">
+    <header class="headline-con">
+        <h2>Pošlite nám správu!</h2>
+    </header>
+    <div class="con-look">
+        <span>V prípade otázok nás môžete kontaktovať cez tento formulár</span>
+    </div>
+</section>
 <section class="form">
 
 </section>
