--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -111,28 +111,28 @@
         <div class="container-about-row">
             <div class="container-about-col">
                 <img alt="" src="../../image/about-us/web-cover-praca.webp">
-                  <div class="about-text">
-                      <div class="spacer-img-b"></div>
-                      <h3 class="about-h3">Práca</h3>
-                      <h6 class="about-h6">Našou pracou je dosiahnuť spokojnosť zákazníka v digitálnom svete</h6>
-                  </div>
+                <div class="about-text">
+                    <div class="spacer-img-b"></div>
+                    <h3 class="about-h3">Práca</h3>
+                    <h6 class="about-h6">Našou prácou je dosiahnuť spokojnosť zákazníka v digitálnom svete</h6>
+                </div>
             </div>
             <div class="container-about-col">
                 <div class="container-about-row">
                     <img alt="" src="../../image/about-us/web-cover-fyloz.webp">
-                     <div class="about-text-2">
-                         <div class="spacer-img-b2"></div>
-                         <h3 class="about-h3">Filozofia digitálnej generácie</h3>
-                         <h6 class="about-h6">Dôvera a poctivosť sa vypláca</h6>
-                     </div>
+                    <div class="about-text-2">
+                        <div class="spacer-img-b2"></div>
+                        <h3 class="about-h3">Filozofia digitálnej generácie</h3>
+                        <h6 class="about-h6">Dôvera a poctivosť sa vypláca</h6>
+                    </div>
                 </div>
                 <div class="container-about-row">
                     <img alt="" src="../../image/about-us/web-cover-kancelaria.webp">
-                      <div class="about-text-2">
-                          <div class="spacer-img-b2"></div>
-                          <h3 class="about-h3">Digitálna kancelária</h3>
-                          <h6 class="about-h6">Nikde na planéte Zem</h6>
-                      </div>
+                    <div class="about-text-2">
+                        <div class="spacer-img-b2"></div>
+                        <h3 class="about-h3">Digitálna kancelária</h3>
+                        <h6 class="about-h6">Nikde na planéte Zem</h6>
+                    </div>
                 </div>
             </div>
         </div>
@@ -160,10 +160,10 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>NÁŠ TÍM</h2>
+        <h2>Náš tím</h2>
     </header>
     <div class="con-look">
-        <span>ĽUDIA KTORÝ ZREALIZUJÚ VÁŠ PROJEKT</span>
+        <span>Ľudia ktorí zrealizujú Váš projekt</span>
     </div>
     <section class="photo-team">
         <div class="container-cv">
@@ -414,4 +414,3 @@
 <script src="../../js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
-
