JP GENERATION - CONTACT BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -96,21 +96,21 @@
     </div>
 </section>
 <!-------------ZACIATOK CONTENTU-------------->
-<section class="services">
-    <header class="headline-con">
+<section class="services-conta">
+    <header class="headline-conta">
         <h2>Nájdete nás</h2>
     </header>
-    <div class="con-look">
-        <span>Už len jeden krok od digitálnej generácie</span>
+    <div class="con-look-conta">
+        <span class="span-con">Už len jeden krok od digitálnej generácie</span>
     </div>
 </section>
 <!-------------FORMULAR------------->
-<section class="services">
-    <header class="headline-con">
+<section class="services-conta">
+    <header class="headline-conta">
         <h2>Pošlite nám správu!</h2>
     </header>
-    <div class="con-look">
-        <span>V prípade otázok nás môžete kontaktovať cez tento formulár</span>
+    <div class="con-look-conta">
+        <span class="span-con">V prípade otázok nás môžete kontaktovať cez tento formulár</span>
     </div>
 </section>
 <section class="form">
@@ -118,7 +118,7 @@
 </section>
 <!-------------MAPA------------->
 <section class="google-map">
-
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1308.7135232393316!2d21.226232!3d49.00246!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ef29a65d6762f%3A0x70dfa9855d39e2fe!2sMatice%20slovenskej%204768%2F4%2C%20080%2001%20Pre%C5%A1ov%2C%20Slovensko!5e0!3m2!1ssk!2sus!4v1686171964905!5m2!1ssk!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 <!-------------FOOTER-------------->
 <footer>
