JP GENERATION - CONTACT BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -103,6 +103,25 @@
     <div class="con-look-conta">
         <span class="span-con">Už len jeden krok od digitálnej generácie</span>
     </div>
+    <section class="contact">
+        <div class="contact-row">
+            <div class="contact-col">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <h3>Telefóne číslo</h3>
+                <p>+421 907 112 358</p>
+            </div>
+            <div class="contact-col con-mid">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Adresa</h3>
+                <p>Niekde na planéte Zem</p>
+            </div>
+            <div class="contact-col">
+                <i class="fa-solid fa-envelope-open-text"></i>
+                <h3>E–mail</h3>
+                <p>info@jpgeneration.sk</p>
+            </div>
+        </div>
+    </section>
 </section>
 <!-------------FORMULAR------------->
 <section class="services-conta">
@@ -114,7 +133,40 @@
     </div>
 </section>
 <section class="form">
-
+    <div>
+        <form action="#" id="#" method="get">
+            <div>
+                <div>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname" placeholder="meno"><br><br>
+                </div>
+                <div>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname" placeholder="priezvisko"><br><br>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname" placeholder="e-mail"><br><br>
+                </div>
+                <div>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname" placeholder="predmet"><br><br>
+                </div>
+            </div>
+            <div>
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Správa.." style="height:200px"></textarea>
+            </div>
+            <div>
+                <button>
+                    <input type="submit" value="Submit">
+                </button>
+                <i class="fa-solid fa-spinner"></i>
+            </div>
+        </form>
+    </div>
 </section>
 <!-------------MAPA------------->
 <section class="google-map">
