--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -137,28 +137,38 @@
         <form action="#" id="#" method="get">
             <div>
                 <div>
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="meno"><br><br>
+                    <label for="name">Meno</label>
+                    <input type="text" id="name" name="name" placeholder="Meno"><br><br>
                 </div>
                 <div>
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="priezvisko"><br><br>
+                    <label for="lastname">Priezvisko</label>
+                    <input type="text" id="lastname" name="lastname" placeholder="Priezvisko"><br><br>
                 </div>
             </div>
             <div>
                 <div>
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="e-mail"><br><br>
+                    <label for="email">E - mail</label>
+                    <input type="text" id="email" name="email" placeholder="E - mail"><br><br>
                 </div>
                 <div>
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="predmet"><br><br>
+                    <label for="subject">Predmet</label>
+                    <input type="text" id="subject" name="subject" placeholder="Predmet"><br><br>
                 </div>
             </div>
             <div>
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Správa.." style="height:200px"></textarea>
+                <label for="message">Správa</label>
+                <textarea id="message" name="message"  placeholder="Vaša správa..."></textarea>
             </div>
+            <select id="country" name="country">
+                <option value="servicer">Výber si službu...</option>
+                <option value="foto-production">Foto produkcia</option>
+                <option value="video-production">Video produkcia</option>
+                <option value="graphic-design">Grafický dizajn</option>
+                <option value="wordpress-web">Wordpress web</option>
+                <option value="domain-hosting-managment">Správa domény a hostingu</option>
+                <option value="digital-strategy">Digitálna stratégia</option>
+                <option value="other">Iné..</option>
+            </select>
             <div>
                 <button>
                     <input type="submit" value="Submit">
