--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -133,47 +133,55 @@
     </div>
 </section>
 <section class="form">
-    <div>
+    <div class="form-row">
         <form action="#" id="#" method="get">
-            <div>
-                <div>
-                    <label for="name">Meno</label>
-                    <input type="text" id="name" name="name" placeholder="Meno"><br><br>
+            <div class="form-wrap">
+                    <label for="name">
+                    <input type="text" id="name" name="name" placeholder="Meno" maxlength="64" required>
+                    </label>
+                    <label for="lastname">
+                    <input type="text" id="lastname" name="lastname" placeholder="Priezvisko" maxlength="64" required>
+                    </label>
+                    <label for="email">
+                    <input type="text" id="email" name="email" placeholder="E - mail" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" required>
+                    </label>
+                    <label for="subject">
+                    <input type="text" id="subject" name="subject" placeholder="Predmet" maxlength="64" required>
+                    </label>
                 </div>
-                <div>
-                    <label for="lastname">Priezvisko</label>
-                    <input type="text" id="lastname" name="lastname" placeholder="Priezvisko"><br><br>
+                <div class="form-wrap">
+                    <label for="services">
+                        <select id="services" name="services" required>
+                            <option value="servicer">Výber si službu...</option>
+                            <option value="foto-production">Foto produkcia</option>
+                            <option value="video-production">Video produkcia</option>
+                            <option value="graphic-design">Grafický dizajn</option>
+                            <option value="wordpress-web">Wordpress web</option>
+                            <option value="domain-hosting-managment">Správa domény a hostingu</option>
+                            <option value="digital-strategy">Digitálna stratégia</option>
+                            <option value="other">Iné..</option>
+                        </select>
+                    </label>
                 </div>
+                <div class="form-wrap">
+            <label for="message">
+            <textarea id="message" name="message" placeholder="Vaša správa..." minlength="5" maxlength="700"
+                      required></textarea>
+            </label>
+                </div>
+            <div class="form-wrap">
+                <label for="chceckbox">
+                <input id="chceckbox" name="message" type="checkbox" required><a href="gdpr.html">Súhlasim s GDPR</a>
+                </label>
             </div>
-            <div>
-                <div>
-                    <label for="email">E - mail</label>
-                    <input type="text" id="email" name="email" placeholder="E - mail"><br><br>
-                </div>
-                <div>
-                    <label for="subject">Predmet</label>
-                    <input type="text" id="subject" name="subject" placeholder="Predmet"><br><br>
-                </div>
+            <div class="form-wrap">
+                <label for="submit">
+                <input id="submit" class="submit-btn" onclick="toastFunction()" type="submit" name="submit" value="ODOSLAŤ">
+                </label>
             </div>
-            <div>
-                <label for="message">Správa</label>
-                <textarea id="message" name="message"  placeholder="Vaša správa..."></textarea>
-            </div>
-            <select id="country" name="country">
-                <option value="servicer">Výber si službu...</option>
-                <option value="foto-production">Foto produkcia</option>
-                <option value="video-production">Video produkcia</option>
-                <option value="graphic-design">Grafický dizajn</option>
-                <option value="wordpress-web">Wordpress web</option>
-                <option value="domain-hosting-managment">Správa domény a hostingu</option>
-                <option value="digital-strategy">Digitálna stratégia</option>
-                <option value="other">Iné..</option>
-            </select>
-            <div>
-                <button>
-                    <input type="submit" value="Submit">
-                </button>
-                <i class="fa-solid fa-spinner"></i>
+            <div id="toast">
+                <div class="checkicon"></div>
+                ÚSPECH: Dostali sme vašu správu. Vďaka!
             </div>
         </form>
     </div>
@@ -323,6 +331,7 @@
 <script src="../js/nav.js" type="text/javascript"></script>
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script src="../js/submit-alert.js" type="text/javascript"></script>
 </body>
 </html>
 
