--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -152,7 +152,7 @@
                 <div class="form-wrap">
                     <label for="services">
                         <select id="services" name="services" required>
-                            <option value="servicer">Výber si službu...</option>
+                            <option value="" disabled selected hidden style="color: gray;">Vyberte si službu</option>
                             <option value="foto-production">Foto produkcia</option>
                             <option value="video-production">Video produkcia</option>
                             <option value="graphic-design">Grafický dizajn</option>
@@ -165,13 +165,13 @@
                 </div>
                 <div class="form-wrap">
             <label for="message">
-            <textarea id="message" name="message" placeholder="Vaša správa..." minlength="5" maxlength="700"
+            <textarea id="message" name="message" placeholder="Vaša správa..." minlength="5" maxlength="1400"
                       required></textarea>
             </label>
                 </div>
             <div class="form-wrap">
                 <label for="chceckbox">
-                <input id="chceckbox" name="message" type="checkbox" required><a href="gdpr.html">Súhlasim s GDPR</a>
+                <input id="chceckbox" name="message" type="checkbox" required><a class="gdpr-ceck" href="gdpr.html" target="_blank">Súhlasim s GDPR</a>
                 </label>
             </div>
             <div class="form-wrap">
