JP GENERATION - CONTACT BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -180,8 +180,7 @@
                 </label>
             </div>
             <div id="toast">
-                <div class="checkicon"></div>
-                ÚSPECH: Dostali sme vašu správu. Vďaka!
+                Dostali sme vašu správu. Vďaka!
             </div>
         </form>
     </div>
