JP GENERATION - CONTACT BUILDING

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -457,7 +457,7 @@
 <section class="mind-sec">
     <div class="backgr-img">
         <div class="overlay">
-            <img alt="Overlay Image" class="overlay-img" src="../image/big-mind/jp-big-mind.webp">
+            <img alt="Overlay Image" class="overlay-img-jp" src="../image/big-mind/jp-big-mind.webp">
             <div class="overlay-content">
                 <h2 class="mind">Máte na mysli niečo veľké?</h2>
                 <button class="come-on">
