--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -171,7 +171,7 @@
                 <div class="team-member">
                     <div class="team-img">
                         <img src="../../image/about-us/founder-cover-jp.webp" alt="">
-                        <div class="overlay">
+                        <div class="overlay-photo">
                             <div class="team-details">
                                 <h3 class="team-title">Jaroslav Potočný</h3>
                                 <span class="span-team">Founder</span>
