--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -110,25 +110,21 @@
 </section>
 <section class="video">
     <div class="video-row">
-
-
-    <div class="video-column">
-            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+        <div class="video-column">
+            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
                     frameborder="0"
                     src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0"
                     title="YouTube video player"></iframe>
         </div>
         <div class="video-column">
-            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
                     frameborder="0"
                     src="https://www.youtube-nocookie.com/embed/F3asDg68raw"
                     title="YouTube video player"></iframe>
         </div>
-
-
     </div>
-
-
 </section>
 <br>
 <br>
@@ -272,7 +268,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
