JP GENERATION - FORM BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -152,7 +152,7 @@
                 <div class="form-wrap">
                     <label for="services">
                         <select id="services" name="services" required>
-                            <option value="" disabled selected hidden style="color: gray;">Vyberte si službu</option>
+                            <option value="none" disabled selected hidden>Vyberte si službu</option>
                             <option value="foto-production">Foto produkcia</option>
                             <option value="video-production">Video produkcia</option>
                             <option value="graphic-design">Grafický dizajn</option>
