--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -110,44 +110,41 @@
         <div>
             <i aria-hidden="true" class="fa fa-birthday-cake" id="con-ser-icon1"></i>
             <h3>Udalosť</h3>
-            <p class="con-ser-p">Udalosť na ktorú nechcete zabudnúť? Spomienka na párty kde sa Vaši zákazníci bavili? Svadba ktorá sa väčšinou koná len raz za život? S nami na ňu určite nezabudnete…</p>
+            <p class="con-ser-p">Vaša udalosť, na ktorú sa budete radi vracať. Zabezpečíme vám výnimočné fotografie, ktoré zachytia každý kúsok radosti a vzrušenia.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-regular fa-calendar-days" id="con-ser-icon2"></i>
             <h3>Firemná akcia</h3>
-            <p class="con-ser-p">Firemný večierok alebo team building? Ukážte svojim zákazníkom že popri tom všetkom sa staráte dobre aj o svojich zamestnancov…</p>
+            <p class="con-ser-p">Firemná akcia, ktorá zanechá stopy. Oživte svoje podujatia s našou profesionálnou foto produkciovou službou a ukážte starostlivosť o svojich zamestnancov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-shirt" id="con-ser-icon3"></i>
             <h3>Produkt</h3>
-            <p class="con-ser-p">Chceme rozbehnúť alebo vlastníme e-shop no fotky z mobilu nedodávajú tomu ten správny efekt? Každý jeden zákazník chce vedieť detailne čo kupuje preto to nepodceňte…</p>
+            <p class="con-ser-p">Vytvorte si profesionálny dojem: Dajte svojim produktom život s našimi kvalitnými fotografiami, aby si zákazníci mohli detailne prezrieť, čo kupujú.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa-solid fa-building" id="con-ser-icon4"></i>
             <h3>Priestor</h3>
-            <p class="con-ser-p">Prenajímate alebo predávate byt, dom, kancelárske priestory? Otvárate novú reštauráciu alebo bar? Poskytnite zákazníkom zážitok ešte pred prvým vstupom…</p>
+            <p class="con-ser-p">Prezentujte svoj priestor v najlepšom svetle. Pomôžeme vám vytvoriť zážitok už pred vstupom do vášho bytu, domu, kancelárie, reštaurácie alebo baru.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-people-group" id="con-ser-icon5"></i>
             <h3>Ľudia</h3>
-            <p class="con-ser-p">Potrebujete profesionálne fotky pre Vašich zamestnancov? Chceli by ste nový portrét
-                alebo profilovú fotografiu? V pohodlí ateliéru to spolu dokážeme…</p>
+            <p class="con-ser-p">Portréty, ktoré hovoria o vás. S našou foto produkciou zachytíme vašu osobnosť a šarm prostredníctvom profesionálnych fotografií.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-display" id="con-ser-icon6"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Vyčerpali ste databázu fotiek pre Vašu reklamu alebo sociálnu sieť? Poďme na to…</p>
+            <p class="con-ser-p">Fotografie, ktoré hovoria viac ako slová. Pomôžeme vám vytvoriť oslnivú reklamu alebo obsah pre sociálne siete, aby ste si udržali záujem zákazníkov.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa-solid fa-rotate" id="con-ser-icon7"></i>
             <h3>360° fotografia</h3>
-            <p class="con-ser-p">Chcete poskytnúť svojim zákazníkom lepší zážitok a detail z prezerania produktu?
-                Veľkostné maximálne do 60 x 60 x 50 cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný
-                produkt to bude stačiť…</p>
+            <p class="con-ser-p">Nechajte svoj produkt ožiť. S našou 360° fotografiou poskytnete svojim zákazníkom jedinečný zážitok z prezerania a dôkladného skúmania vášho produktu.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -175,45 +172,47 @@
                     <h2>Informácie</h2>
                 </header>
                 <div class="con-look-ser-faq">
-                    <span>Najčastejšie otázky</span>
+                    <span>Často kladené otázky (FAQ)</span>
                 </div>
                 <div class="skill-text">
-                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                    Informácie a odpovede na najčastejšie otázky od našich zákazníkov.
                 </div>
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
                     <div class="panel">
-                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené fotografie po fotení nahrajeme
-                            zákazníkovi na cloudové úložisko, kde budú uchované 30 dní. V prípade dodania fotografi v
-                            tlačovej forme už ide o konkrétnu dohodu medzi nami a zákazníkom.</p>
+                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
                     <div class="panel">
-                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
+                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
                     </button>
                     <div class="panel">
-                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
                     </div>
-
-
                 </div>
-
-
+                <div class="menu-4">
+                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                    </div>
+                </div>
+                <div class="menu-5">
+                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
     </div>
