--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -179,45 +179,47 @@
                     <h2>Informácie</h2>
                 </header>
                 <div class="con-look-ser-faq">
-                    <span>Najčastejšie otázky</span>
+                    <span>Často kladené otázky (FAQ)</span>
                 </div>
                 <div class="skill-text">
-                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                    Informácie a odpovede na najčastejšie otázky od našich zákazníkov.
                 </div>
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
                     <div class="panel">
-                        <p>Službu dodávame elektronicky od Vás budeme potrebovať prístupové údaje k vašej doméne a
-                            hostingu alebo prípadne k FTP serveru.</p>
+                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
                     <div class="panel">
-                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií
-                            služby.</p>
+                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
                     </button>
                     <div class="panel">
-                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
                     </div>
-
-
                 </div>
-
-
+                <div class="menu-4">
+                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                    </div>
+                </div>
+                <div class="menu-5">
+                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
     </div>
