--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -110,46 +110,41 @@
         <div>
             <i aria-hidden="true" class="fa fa-facebook" id="con-ser-icon1"></i>
             <h3>Facebook</h3>
-            <p class="con-ser-p">After movie z vašej akcie alebo propagácia produktu? Produkt Vám dodáme tak aby ste ho už len bezstarostne pridali jedným klikom…</p>
+            <p class="con-ser-p">After movie, ktoré oživí vašu akciu.Pomôžeme vám vytvoriť profesionálne videá, ktoré vás vystavia v najlepšom svetle a pripútajú pozornosť vašej cieľovej skupiny.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-instagram" id="con-ser-icon2"></i>
             <h3>Instagram</h3>
-            <p class="con-ser-p">Reels alebo video post. Sledujete tie úžasné videá na instagrame no neviete ich
-                vytvoriť?Radi Vám s tým pomôžeme…</p>
+            <p class="con-ser-p">Kreatívne Reels a video posty. Nechajte nás vytvoriť úžasné videá na Instagram, ktoré zaujmú vašich nasledovníkov a vytvoria silnú vizuálnu identitu pre váš profil.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-youtube-play" id="con-ser-icon3"></i>
             <h3>YouTube</h3>
-            <p class="con-ser-p">Máte kanál na YouTube ktorý chcete posunúť na vyšší level? Vaše videá vyzerajú obyčajne? Ukážeme Vám ako to má vyzerať…/p>
+            <p class="con-ser-p">Posunite váš YouTube kanál na vyšší level. Pomôžeme vám vytvoriť profesionálne a vizuálne pútavé videá, ktoré vám pomôžu zaujať a angažovať vaše publikum.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-globe" id="con-ser-icon4"></i>
             <h3>Web</h3>
-            <p class="con-ser-p">Používali ste doteraz len free mobilné aplikácie pre Vašu tvorbu? A po nahratí sa Vám
-                zdá že už to nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
+            <p class="con-ser-p">Videá, ktoré oživia váš web. Už nezostávajte len pri mobilných aplikáciách. Pomôžeme vám spracovať videá, ktoré budú zaujímavé a interaktívne na vašom webe.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-scissors" id="con-ser-icon5"></i>
             <h3>Strihanie</h3>
-            <p class="con-ser-p">Máme natočené video aj myšlienku ako by malo vyzerať no nemáme so strihom skúsenosť. Pošlite nám ho a určite niečo spoločne vymyslíme…</p>
+            <p class="con-ser-p">Vaše myšlienky, náš strih. Ak máte koncept, ale potrebujete skúsenosti so strihaním videa, dajte nám ho a vytvoríme spoločne niečo úžasné.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-file-video-o" id="con-ser-icon6"></i>
             <h3>Re-editácia</h3>
-            <p class="con-ser-p">Máme sériu after movie a chceli by sme si pridať jedno spomienkové video a na všetky.
-                Pošlite nám ich a urobíme z nich niečo nové…</p>
+            <p class="con-ser-p">Vytvárame nové z existujúcich videí. Nechajte nás vytvoriť nové videá zo série existujúcich videí a prineste im nový život a hodnotu.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
             <h3>360° video</h3>
-            <p class="con-ser-p">Chcete poskytnúť svojim zákazníkom lepší zážitok a detail z prezerania produktu?
-                Veľkostné maximálne do 60 x 60 x 50 cm. Auto Vám zatiaľ profesionálne natočiť nedokážeme ale pre bežný
-                produkt to bude stačiť…</p>
+            <p class="con-ser-p">Zaujímavý zážitok s 360° videami. Ponúkame vám možnosť vytvoriť 360° videá, ktoré umožnia vašim zákazníkom detailnejšie prehliadnuť váš produkt a zažiť interaktívny zážitok.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -177,44 +172,48 @@
                     <h2>Informácie</h2>
                 </header>
                 <div class="con-look-ser-faq">
-                    <span>Najčastejšie otázky</span>
+                    <span>Často kladené otázky (FAQ)</span>
                 </div>
                 <div class="skill-text">
-                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                    Informácie a odpovede na najčastejšie otázky od našich zákazníkov.
                 </div>
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa video produkcia uskutočňuje?</span></button>
                     <div class="panel">
-                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené video po točení nahrajeme
-                            zákazníkovi na cloudové úložisko, kde budú uchované 30 dní.</p>
+                        <p>Naša video produkcia sa realizuje fyzicky na mieste, ktoré si vyberiete. Môže ísť o rôzne udalosti, ako sú firemné stretnutia, konferencie, svadby, hudobné koncerty alebo iné podujatia. Naši profesionálni kameramani zabezpečia zachytenie dôležitých okamihov a vytvorenie kvalitného videa. Spoločne dohodneme miesto a čas konania.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie hotového videa?</span></button>
                     <div class="panel">
-                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
+                        <p>Časový rámec na spracovanie a doručenie hotového videa sa líši v závislosti od rozsahu projektu a aktuálneho pracovného vyťaženia. Po skončení natáčania videa nasleduje proces strihania, úpravy a pridávania efektov. Snažíme sa vám poskytnúť hotové video v čo najkratšom čase, aby ste si mohli vychutnať výsledok.</p>
                     </div>
-
-
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované video produkcie a akceptujete platbu kreditnými kartami?</span>
                     </button>
                     <div class="panel">
-                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                        <p>Platbu za naše video produkcie je možné vykonať prevodom na náš bankový účet alebo v hotovosti pri realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale vieme vám poskytnúť podrobnosti o platbe vopred, aby ste mali všetko pripravené.</p>
                     </div>
-
-
                 </div>
-
-
+                <div class="menu-4">
+                    <button class="accordion"><span class="btn-text">
+Ake formáty a akú kvalitu videa poskytujeme pre rôzne platformy?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Poskytujeme videá vo viacerých formátoch, vrátane digitálnych formátov ako MP4, MOV, AVI a veľa ďalších. Prispôsobíme sa vašim požiadavkám na formát a kvalitu videa, aby bolo kompatibilné s rôznymi platformami a zariadeniami.</p>
+                    </div>
+                </div>
+                <div class="menu-5">
+                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené videá uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Po spracovaní a odovzdaní hotových videí vám poskytneme prístup na cloudové úložisko, kde budú vaše videá uchované počas 30 dní. Počas tohto obdobia máte možnosť si videá stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme video z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty..</p>
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
     </div>
